@@ -6,7 +6,7 @@
 #    By: mconnat <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/11/28 15:26:45 by mconnat           #+#    #+#              #
-#    Updated: 2015/12/09 16:24:08 by mconnat          ###   ########.fr        #
+#    Updated: 2015/12/27 00:35:26 by mlinhard         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,7 +17,9 @@ SRCS	= 	convert_list.c \
 			create_list.c \
 			check_file.c \
 			read_file.c \
-		  	main.c
+			solveit.c \
+			printit.c \
+			main.c
 
 HEADER	=	fillit.h
 
@@ -42,5 +44,8 @@ fclean	: clean
 	@rm -rf $(NAME)
 
 re		: fclean all
+
+test	: fclean all
+	./fillit sample/valid_four
 
 .PHONY: all clean fclean re
