@@ -1,0 +1,2 @@
+Fonctionnement de l'algo après stoquage des pieces sous forme de chaine ->
+
