@@ -1,0 +1,20 @@
+..#.
+.##.
+.#..
+....
+
+.#..
+##..
+.#..
+....
+
+...#
+.###
+....
+....
+
+....
+..#.
+..#.
+..##
+
